fix spacing on cards

--- a/scss/article.scss
+++ b/scss/article.scss
@@ -47,16 +47,18 @@ article.item-full  {
 		max-width: 550px;
 	}
 	.article-media {
-		margin: 40px 0;
+		margin: 0px 0;
 		.article-card {
 			width: 200px;
 			height: 300px;
+			margin: 40px auto;
 			border-radius: 5px;
 			background-color: $white;
 			overflow: hidden;
 		}
 	}
 	.article-secondary-image {
+		margin: 40px auto;
 		height: 100%;
 		width: 100%;
 		img {
